--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.pbcoffee.code-happiness": "https://github.com/pblazyca/code-happiness.git?path=/unity-code-happiness/Assets",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
