Update Unity version to 2022.2

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.pbcoffee.code-happiness": "https://github.com/pblazyca/code-happiness.git?path=/unity-code-happiness/Assets",
+    "com.unity.ai.navigation": "1.1.1",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
